--- a/Forum/subscribe.html
+++ b/Forum/subscribe.html
@@ -78,6 +78,54 @@
                 </div>          
             </div>            
         </section>
+
+        <section class="faqs">
+            <div class="container">
+                <div class="row">
+                    <h2>Frequently asked questions</h2>
+                    <div class="faq">
+                        <div class="question">
+                            <h3>For who is this forum?</h3>
+                            <i class="ri-arrow-down-wide-line"></i>                            
+                        </div>
+                        <div class="answer">
+                            <p>This forum is for Janowianka players</p>
+                        </div>
+                    </div>
+                    <div class="faq">
+                        <div class="question">
+                            <h3>Can i resign earlier when i buy yearly subscription?</h3>
+                            <i class="ri-arrow-down-wide-line"></i>                            
+                        </div>
+                        <div class="answer">
+                            <p>Yes, you can resign but your money wont return and subscription will continiue due to end</p>
+                        </div>
+                    </div>
+                        <div class="faq">
+                        <div class="question">
+                            <h3>Can i pay in othere value?</h3>
+                            <i class="ri-arrow-down-wide-line"></i>                            
+                        </div>
+                        <div class="answer">
+                            <p>We accept all currency</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="contacts">
+            <div class="container">
+                <div class="row">
+                    <div class="contact">
+                        <h3>Got any questions?</h3>
+                        <p>Contact in here</p>
+                    </div>
+                    <a href="#" class="btn btn-red">Contact us</a>
+                </div>
+            </div>
+        </section>
+
     </main>
 
     <footer>
@@ -93,6 +141,8 @@
             </p>
         </div>        
     </footer>
+
+    <script src="/js/subscribe.js"></script>
     
 </body>
 </html>
